syntax = "proto3";

package pomerium.extensions;

import "google/protobuf/wrappers.proto";

option go_package = "github.com/pomerium/pomerium/config/envoyconfig/extensions";

message UuidxRequestIdConfig {
  google.protobuf.BoolValue pack_trace_reason                 = 1;
  google.protobuf.BoolValue use_request_id_for_trace_sampling = 2;
}
